--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Tùng Duy</title>
+  <title>Github Blog</title>
   <link rel="shortcut icon" type="image/png" href="/monkey.png"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
