no no no no no no

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="col-sm-4">
       <h2>About Me</h2>
       <h5>Photo of me:</h5>
-      <div class="fakeimg"><img src="img\Abstract details210_rectangle.jpg" alt=""></div>
+      <div class="fakeimg"><img src="cutkit.github.io\img\Ao4713_rectangle.jpg" alt=""></div>
       
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
       <h3>Some Links</h3>
