--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <body>
   <h1>Github</h1>
   <a href="cutkit.github.io\img\Dots892_rectangle.jpg"> hình nền</a>
+  
+  <a href="cutkit.github.io\img\Dots892_rectangle.jpg"> hình nền</a>
 </body>
 </html>
