--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Github Blog</title>
-  <link rel="shortcut icon" type="image/png" href="/monkey.png"/>
+  <title>Github Tasty</title>
+  <link rel="shortcut icon" type="image/png" href="/monkey.png" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <style>
+    video {
+    width: 100%;
+    height: auto;
+}
+  </style>
 </head>
+
 <body>
-  <h1>Github</h1>
-  
+  <p class="col-md-12">
+
+  <p class="col-md-3">
+
+  </p>
+  <p class="col-md-6">
+      <video width="400" controls>
+          <source src="videos/test.mp4" type="video/mp4">
+          <!-- <source src="mov_bbb.ogg" type="video/ogg"> -->
+        </video>
+  </p>
+</p>
 </body>
+
 </html>
