--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,18 +19,7 @@
 </head>
 
 <body>
-  <p class="col-md-12">
-
-  <p class="col-md-3">
-
-  </p>
-  <p class="col-md-6">
-      <video width="400" controls>
-          <source src="videos/test.mp4" type="video/mp4">
-          <!-- <source src="mov_bbb.ogg" type="video/ogg"> -->
-        </video>
-  </p>
-</p>
+    Git
 </body>
 
 </html>
