--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Github Tasty</title>
+  <title>github.io</title>
   <link rel="shortcut icon" type="image/png" href="/monkey.png" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,11 @@
 </head>
 
 <body>
-    Git
+    <div>
+        <h4>
+            OH MY GOSH. (Ctrl + K) inserts the hyperlink syntax in the GitHub markdown editor!!! 😍😍😍
+        </h4>
+    </div>
 </body>
 
 </html>
