--- a/index.html
+++ b/index.html
@@ -3,26 +3,14 @@
 
 <head>
   <title>github.io</title>
-  <link rel="shortcut icon" type="image/png" href="/monkey.png" />
+  <!-- <link rel="shortcut icon" type="image/png" href="/monkey.png" /> -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <style>
-    video {
-    width: 100%;
-    height: auto;
-}
-  </style>
 </head>
 
 <body>
     <div>
-        <h4>
-            OH MY GOSH. (Ctrl + K) inserts the hyperlink syntax in the GitHub markdown editor!!! 😍😍😍
-        </h4>
+        
     </div>
 </body>
 
